test/corpus/blocks.txt
================================================================================
Empty document
================================================================================

--------------------------------------------------------------------------------

(root_block)

================================================================================
Nested blocks
================================================================================

contents{
  lod{
    range:r=70;
  }
  lod{}
}

--------------------------------------------------------------------------------

(root_block
  (block
    name: (identifier)
    (block
      name: (identifier)
      (parameter
        name: (identifier)
        type: (type)
        value: (value)))
    (block
      name: (identifier))))

================================================================================
Block on one line
================================================================================

rt { size:ip2=32,64; count:i=1; name:t="Inscatter"; }

--------------------------------------------------------------------------------

(root_block
  (block
    name: (identifier)
    (parameter
      name: (identifier)
      type: (type)
      value: (value))
    (parameter
      name: (identifier)
      type: (type)
      value: (value))
    (parameter
      name: (identifier)
      type: (type)
      value: (string))))

================================================================================
Block whose last value ends at the closing brace
================================================================================

td{ width:t=pw-5 }

--------------------------------------------------------------------------------

(root_block
  (block
    name: (identifier)
    (parameter
      name: (identifier)
      type: (type)
      value: (value))))

================================================================================
Name characters and a brace on the next line
================================================================================

a-b.c~1_2
{
  -1:i=5
}
1.5{}

--------------------------------------------------------------------------------

(root_block
  (block
    name: (identifier)
    (parameter
      name: (identifier)
      type: (type)
      value: (value)))
  (block
    name: (identifier)))

================================================================================
Quoted names and override directives
================================================================================

"@override:video"{
  "@delete:vsync":b=no
  'with space':t="x"
}
"@null"{}
"""triple"""{}

--------------------------------------------------------------------------------

(root_block
  (block
    name: (string)
    (parameter
      name: (string)
      type: (type)
      value: (value))
    (parameter
      name: (string)
      type: (type)
      value: (string)))
  (block
    name: (string))
  (block
    name: (string)))

================================================================================
Type keywords used as names
================================================================================

t{ i:t=x; p3:i=1 }

--------------------------------------------------------------------------------

(root_block
  (block
    name: (identifier)
    (parameter
      name: (identifier)
      type: (type)
      value: (value))
    (parameter
      name: (identifier)
      type: (type)
      value: (value))))

================================================================================
Whitespace the engine skips
================================================================================

a{	b:i=1}c:i=2

--------------------------------------------------------------------------------

(root_block
  (block
    name: (identifier)
    (parameter
      name: (identifier)
      type: (type)
      value: (value)))
  (parameter
    name: (identifier)
    type: (type)
    value: (value)))
