test/corpus/includes.txt
================================================================================
Quoted and unquoted include paths
================================================================================

include "#/develop/gameBase/_common.blk"
include '%dngSceneBlk/base.blk';
include shaders_game_internal.blk
INCLUDE /abs/path.blk // comment

--------------------------------------------------------------------------------

(root_block
  (include file: (string))
  (include file: (string))
  (include file: (value))
  (include file: (value))
  (comment))

================================================================================
Include path on the next line
================================================================================

block{
  include
    "a.blk"
  Include
  b.blk
}

--------------------------------------------------------------------------------

(root_block
  (block
    name: (identifier)
    (include file: (string))
    (include file: (value))))

================================================================================
Include without a path
================================================================================

a{
  include
}
include;

--------------------------------------------------------------------------------

(root_block
  (block
    name: (identifier)
    (include file: (value)))
  (include file: (value)))

================================================================================
The include keyword as a block or parameter name
================================================================================

include{}
Include:t="x"
include = y
include.x:i=1

--------------------------------------------------------------------------------

(root_block
  (block name: (identifier))
  (parameter name: (identifier) type: (type) value: (string))
  (parameter name: (identifier) value: (value))
  (parameter name: (identifier) type: (type) value: (value)))

================================================================================
Include path that starts with an equals sign
================================================================================

include = "x
a{
  include =
}

--------------------------------------------------------------------------------

(root_block
  (include file: (value))
  (block
    name: (identifier)
    (include file: (value))))

================================================================================
Each include path that starts with an equals sign follows one loader mode
================================================================================

"include";= "a" "b"
include="c

--------------------------------------------------------------------------------

(root_block
  (include file: (value))
  (include file: (value)))
