test/corpus/strings.txt
================================================================================
Double- and single-quoted strings
================================================================================

a:t="double 'inner'"
b:t='single "inner"'
c:t=""
d:t=''

--------------------------------------------------------------------------------

(root_block
  (parameter name: (identifier) type: (type) value: (string))
  (parameter name: (identifier) type: (type) value: (string))
  (parameter name: (identifier) type: (type) value: (string))
  (parameter name: (identifier) type: (type) value: (string)))

================================================================================
Tilde escapes
================================================================================

a:t="line~r~n~ttab ~"quoted~" ~~ tilde"
b:t='it~'s'
"PC~~dedicatedServer":t="/gameServer/content"
c:t="escaped~
newline"

--------------------------------------------------------------------------------

(root_block
  (parameter name: (identifier) type: (type) value: (string))
  (parameter name: (identifier) type: (type) value: (string))
  (parameter name: (string) type: (type) value: (string))
  (parameter name: (identifier) type: (type) value: (string)))

================================================================================
Triple-quoted strings
================================================================================

a:t="""
line one "quoted" ""twice""
line two ~""" still inside
"""
b:t='''it's'''
c:t=""""""

--------------------------------------------------------------------------------

(root_block
  (parameter name: (identifier) type: (type) value: (string))
  (parameter name: (identifier) type: (type) value: (string))
  (parameter name: (identifier) type: (type) value: (string)))

================================================================================
Multi-line strings in a block, an array, and an include path
================================================================================

b{
  a:t="""
// not a comment
/* not a comment */ { }
"""; c:i=1
  d:t[]=['''
x
'''; "y";]
}
include """multi
line.blk"""

--------------------------------------------------------------------------------

(root_block
  (block
    name: (identifier)
    (parameter name: (identifier) type: (type) value: (string))
    (parameter name: (identifier) type: (type) value: (value))
    (parameter name: (identifier) type: (type) value: (array (string) (string))))
  (include file: (string)))

================================================================================
Comment markers inside strings
================================================================================

url:t="http://host/*path*/"
"a//b":t='/* not a comment */'

--------------------------------------------------------------------------------

(root_block
  (parameter name: (identifier) type: (type) value: (string))
  (parameter name: (string) type: (type) value: (string)))
