test/corpus/unicode.txt
================================================================================
Non-ASCII text in comments, strings, and unquoted values
================================================================================

// Kelvin sign K and long s ſ
name:t="Kſ Привет"
raw:t=Kſ текст
/* K ſ */
next:i=1

--------------------------------------------------------------------------------

(document
  (comment)
  (parameter name: (identifier) type: (type) value: (string))
  (parameter name: (identifier) type: (type) value: (raw_value))
  (comment)
  (parameter name: (identifier) type: (type) value: (raw_value)))

================================================================================
Non-ASCII letter in a name
:error
================================================================================

aK:i=1

--------------------------------------------------------------------------------
