test/corpus/values.txt
================================================================================
Unquoted values end at a line comment
================================================================================

fname:t=billboard.dag // comment
next:i=1//tight

--------------------------------------------------------------------------------

(root_block
  (parameter name: (identifier) type: (type) value: (value))
  (comment)
  (parameter name: (identifier) type: (type) value: (value))
  (comment))

================================================================================
Unquoted values keep inner spaces, quotes, braces, and slashes
================================================================================

a:t=two words
b:t=say "hi" {x
c:t=a/b/
d:t=path\to\file

--------------------------------------------------------------------------------

(root_block
  (parameter name: (identifier) type: (type) value: (value))
  (parameter name: (identifier) type: (type) value: (value))
  (parameter name: (identifier) type: (type) value: (value))
  (parameter name: (identifier) type: (type) value: (value)))

================================================================================
A block comment closed on the line stays inside the value
================================================================================

a:i=1/* one */2
b:r=70 /* trailing */
c:t=x /* a */ ;

--------------------------------------------------------------------------------

(root_block
  (parameter name: (identifier) type: (type) value: (value))
  (parameter name: (identifier) type: (type) value: (value))
  (comment)
  (parameter
    name: (identifier)
    type: (type)
    value: (value)
    (comment)))

================================================================================
A block comment open at the end of the line ends the value and does not nest
================================================================================

compartment_08_dm:r=177.286/*
  compartment_09_dm:r=504.399 /* inner
  compartment_10_dm:r=177.286*/
cover_01_dm:r=1498.56

--------------------------------------------------------------------------------

(root_block
  (parameter name: (identifier) type: (type) value: (value))
  (comment)
  (parameter name: (identifier) type: (type) value: (value)))

================================================================================
A value follows a line comment that ends the equals line
================================================================================

a:t= // the value is on the next line
b:i=1

--------------------------------------------------------------------------------

(root_block
  (parameter
    name: (identifier)
    type: (type)
    (comment)
    value: (value)))

================================================================================
Block comments elsewhere nest
================================================================================

/* outer /* inner */ still outer */
a:i=1

--------------------------------------------------------------------------------

(root_block
  (comment)
  (parameter name: (identifier) type: (type) value: (value)))

================================================================================
Block comments nest in the statement after an unquoted value
================================================================================

a:t=x
b:t= /* outer /* inner */ still outer */ y
c /* outer /* inner */ still outer */ :t=z

--------------------------------------------------------------------------------

(root_block
  (parameter name: (identifier) type: (type) value: (value))
  (parameter
    name: (identifier)
    type: (type)
    (comment)
    value: (value))
  (parameter
    name: (identifier)
    (comment)
    type: (type)
    value: (value)))
